# TheFirst

./: .clangd  .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md
.cache/clangd/index/: Action.cpp.5E7DE2F4D71D0111.idx  Action.h.F44D1DDF35D94ED2.idx  Angle.hpp.CBA501EC3F58C085.idx  Angle.inl.B9B2F0DEBA582341.idx  Animation.cpp.83BDC35901E34759.idx  Animation.h.C69F9D15527292F5.idx  Assets.cpp.8F67365CBA894BFA.idx  Assets.h.5D8B2505E4CFDE65.idx  BlendMode.hpp.5E0EB99E6DA67CF7.idx  CircleShape.hpp.753A68C2DE64C9A1.idx  Clipboard.hpp.FE26572C37B03D70.idx  Clock.hpp.62AD1C827D958F80.idx  Collision.cpp.93B3BF31B000D3DC.idx  Collision.h.58B45771B8C32228.idx  Color.hpp.7132A67F9B980AD6.idx  Color.inl.506CC0CDC967162A.idx  Component.h.60FB60C38CF1E449.idx  Config.hpp.BED04617C4043FCF.idx  Context.hpp.6B5A2277E6BDA956.idx  ContextSettings.hpp.6BD464FE7698F94F.idx  ConvexShape.hpp.2AFA0719A4E55E0B.idx  CoordinateType.hpp.635DD6F0DFE112E5.idx  Cursor.hpp.9BF4924959F104C1.idx  Drawable.hpp.EA0E9BB062EBE21F.idx  Entity.cpp.E3390385D114ED91.idx  Entity.h.9D037F9EA584E39D.idx  EntityManager.cpp.010F7D6D053C6CED.idx  EntityManager.h.2F74C1B8EAA3B64B.idx  EntityMemoryPool.cpp.3A09B478FD845E55.idx  EntityMemoryPool.h.FF4DF659303A1BE6.idx  Enums.h.E3E230D8E134BA18.idx  Err.hpp.FA1E69C1545FB30B.idx  Event.hpp.4B61B7CB1C63F385.idx  (+78 more)
2D_part/Image/: 9f27c41c-0ce7-497c-a475-bbc31cc6c3c2.avif  character.aseprite  character_sprite_idle.aseprite
resource/: assets.txt
resource/scene/: prologue.txt
resource/texture/: Menu.jpg~
source/: .clang-format  Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  Collision.cpp  Collision.h  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityMemoryPool.cpp  EntityMemoryPool.h  Enums.h  GameEngine.cpp  GameEngine.h  JoystickEnum.h  NavigationNode.cpp  NavigationNode.h  NavigationNodeManager.cpp  NavigationNodeManager.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Prologue.cpp  Scene_Prologue.h  Vec2.cpp  Vec2.h  Weapon.cpp  Weapon.h  main.cpp  math.cpp  math.h
